--- a/register.html
+++ b/register.html
@@ -31,7 +31,7 @@
                 </tr>
                 <tr>
                     <td><input type="submit" name="signup" value="sign_up"> </td>
-                    <td>already have an account?<a href="loginpage.html">login</a></td>
+                    <td>already have an account?<a href="index.html">login</a></td>
                 </tr>
             </table>
         </form>
